--- a/src/main/java/UI/main/LoginJDialog.form
+++ b/src/main/java/UI/main/LoginJDialog.form
@@ -131,8 +131,8 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace pref="72" max="32767" attributes="0"/>
-                  <Component id="jLabel5" min="-2" pref="376" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+                  <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="111" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
