Ly: code HoaDonJDialog

--- a/src/main/java/UI/Detail/ChiTietSPDetailJDialog.form
+++ b/src/main/java/UI/Detail/ChiTietSPDetailJDialog.form
@@ -75,10 +75,10 @@
                   <Component id="lblHinhAnh" min="-2" pref="112" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="82" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="btnLamMoi" alignment="0" pref="77" max="32767" attributes="0"/>
+                      <Component id="btnLamMoi" alignment="0" max="32767" attributes="0"/>
                       <Component id="btnThem" alignment="0" max="32767" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="96" max="32767" attributes="0"/>
+                  <EmptySpace pref="62" max="32767" attributes="0"/>
               </Group>
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
@@ -204,7 +204,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="btnThem">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Th&#xea;m"/>
+            <Property name="text" type="java.lang.String" value="Th&#xea;m th&#xf4;ng tin"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnThemActionPerformed"/>
