--- a/src/main/java/UI/Component/HoaDonJDialog.form
+++ b/src/main/java/UI/Component/HoaDonJDialog.form
@@ -40,7 +40,7 @@
                       <EmptySpace min="-2" pref="124" max="-2" attributes="0"/>
                       <Component id="btnThemHoaDon" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="90" max="-2" attributes="0"/>
-                      <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnXoaKhoiHD" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="85" max="-2" attributes="0"/>
                       <Component id="btnLuuHoaDon" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
@@ -62,7 +62,7 @@
               <Component id="jPanel3" min="-2" pref="376" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnXoaKhoiHD" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnLuuHoaDon" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnHuyHoaDon" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="btnThemHoaDon" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -125,8 +125,8 @@
                   </Group>
                   <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="jTextField4" alignment="0" max="32767" attributes="0"/>
-                      <Component id="jTextField5" alignment="0" max="32767" attributes="0"/>
+                      <Component id="txtMaKH" alignment="0" max="32767" attributes="0"/>
+                      <Component id="txtTenKH" alignment="0" max="32767" attributes="0"/>
                       <Component id="jTextField6" alignment="0" max="32767" attributes="0"/>
                       <Component id="txtSoDT" alignment="0" min="-2" pref="334" max="-2" attributes="0"/>
                   </Group>
@@ -142,13 +142,13 @@
                       <Component id="txtMaHD" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jTextField4" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtMaKH" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="txtNgayBan" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jTextField5" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="txtTenKH" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -251,9 +251,12 @@
             <Property name="text" type="java.lang.String" value="S&#x1ed1; &#x111;i&#x1ec7;n tho&#x1ea1;i"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextField4">
+        <Component class="javax.swing.JTextField" name="txtMaKH">
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextField5">
+        <Component class="javax.swing.JTextField" name="txtTenKH">
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtTenKHKeyPressed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextField6">
         </Component>
@@ -558,13 +561,16 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnHuyHoaDonActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="btnXoaKhoiHD">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Arial" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="X&#xf3;a kh&#x1ecf;i h&#xf3;a &#x111;&#x1a1;n"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnXoaKhoiHDActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
